# green-omega-task

./: .env.local  README.md  pnpm-lock.yaml  prompt.md
apps/api/: .dockerignore  Dockerfile  alembic.ini  auth.py  config.py  deploy.sh  fly.toml  main.py  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 80aabe394ba4_create_users_table.py
apps/api/db/: deps.py  session.py
apps/api/models/: __init__.py  user.py
apps/api/routers/: marketing_mix.py  mmm.py
apps/api/schemas/: marketing_mix.py  mmm.py
apps/api/services/: __init__.py  marketing_mix_service.py  user_service.py
apps/api/tests/: test_marketing_mix_service.py
apps/web/: middleware.ts  package.json  vercel.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/api/me/: route.ts
apps/web/app/dashboard/: page.tsx
apps/web/app/dashboard/response-curves/: page.tsx
apps/web/app/sign-in/[[...sign-in]]/: page.tsx
apps/web/app/sign-up/[[...sign-up]]/: page.tsx
apps/web/components/: app-sidebar.tsx  channel-contribution-table.tsx  global-user-sync.tsx  marketing-mix-dashboard.tsx
apps/web/components/charts/: bar-chart.tsx  scatter-chart.tsx  time-series-chart.tsx  use-measure.ts
apps/web/components/mmm/: contribution-chart.tsx  meridian-contribution-chart.tsx  meridian-response-curves.tsx  response-curve-grid.tsx  response-curves-page.tsx
apps/web/hooks/: use-user-sync.ts
apps/web/lib/: format.ts
apps/web/lib/api/: marketing-mix.ts  mmm.ts
