[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
]
